Opened 17 years ago

Closed 16 years ago

#1461 closed bug (fixed)

Drag icon of current folder disappears when resizing

Reported by: humdinger Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Tested with build hrev22191.

Open any folder. When resizing the Tracker window horizontally, the drag icon in the menu bar at the top right disappears. I made a small hey script where I resize the window horizontally pixel by pixel. Move one pixel and the icon disappears. After another 18 pixels, the icon reappears. One pixel farther, the icon disappears again, only to again reappear after another 18 pixels. Then I modified the same script to shrink the window again, one pixel at a time. Now the icon does not reappear! MIA.

Maybe that isn't even Tracker's bug, but belongs to the interface kit that has seen some changes for menus recently.

Change History (2)

comment:1 by jackburton, 16 years ago

Ah yes definitely! Could be for example a BMenuBar invalidation issue...

comment:2 by aldeck, 16 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev25948

Note: See TracTickets for help on using tickets.